2170 선긋기 반영6 : 피드백 : pair 개선 + 설명 재작성